add giigle vertfication

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>النايفات للتمويل | حلول تمويل شخصي متوافقة مع الشريعة الإسلامية</title>
+    <meta name="google-site-verification" content="google621cad0974d999b4.html" />
+    <meta name="postalCode" content="1234" />
+
   <meta name="description" content="تمويل شخصي إسلامي للسعوديين والمقيمين بدون تحويل راتب، استقطاع يصل إلى 70%، مرونة سداد تصل إلى 60 شهر">
   <meta name="keywords" content="تمويل شخصي, تمويل إسلامي, تمويل بدون تحويل راتب, تمويل سعودي, حلول تمويلية">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -32,6 +35,7 @@
   <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
 </head>
 <body class="mat-typography">
   <app-root></app-root>
