--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="ar">
 <head>
   <meta charset="utf-8">
-  <title>النايفات للتمويل | حلول تمويل شخصي متوافقة مع الشريعة الإسلامية</title>
+  <title> للتمويل | حلول تمويل شخصي متوافقة مع الشريعة الإسلامية</title>
     <meta name="google-site-verification" content="google621cad0974d999b4.html" />
     <meta name="postalCode" content="1234" />
 
@@ -13,10 +13,10 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://nayifattamwel.github.io/Tamweel">
-  <meta property="og:title" content="النايفات للتمويل | حلول تمويل شخصي إسلامي">
+  <meta property="og:url" content="https://tamweel-one.vercel.app/Tamweel">
+  <meta property="og:title" content=" للتمويل | حلول تمويل شخصي إسلامي">
   <meta property="og:description" content="تمويل شخصي متوافق مع الشريعة الإسلامية، بدون تحويل راتب، استقطاع يصل إلى 70%">
-  <meta property="og:image" content="https://nayifattamwel.github.io/Tamweel/assets/images/logo.png">
+  <meta property="og:image" content="https://tamweel-one.vercel.app/Tamweel/assets/images/logo.png">
 
 
   <!-- Arabic Language Support -->
